src/App.css
#root {
  /* max-width: 1280px; */
  margin: 0 auto;
  /* padding: 2vw; */
  text-align: center;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {aspect-ratio: 9/16;
  color: #888;
}

.phone-wrapper {
  aspect-ratio: 9/16;
  height: 100vh;
  width: auto;
  background: #fcfcfc;
  color: #242424; /* text color */
  overflow: hidden;
  box-shadow: 0 0 5px 0 rgba(0,0,0,0.5);
  position: relative;
  display: flex;
  flex-direction: column;  
  justify-content: space-between;
  gap: 2wh;
}

